# Geo_Sentiment_Climate

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOY.md  Dockerfile  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  PRODUCTION_READY_CERTIFICATION.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  WEEKLY_ROADMAP.md  WEEK_1_4_IMPLEMENTATION_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci-cd.yaml  ci-cd.yml
airflow/dags/: data_pipeline_dag.py
alembic/: env.py
config/: performance.yaml  settings.yml
data/processed/: data_check_report.md  headers.txt
docs/: DEPLOYMENT_GUIDE.md  OPERATIONAL_RUNBOOKS.md  OPERATIONAL_TRAINING_GUIDE.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_5_COMPLETION.md  PHASE_6_COMPLETION.md  data_dictionary.md  design_architecture.md  week1_summary.md  week2_summary.md
helm/geo-climate/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/geo-climate/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
infrastructure/grafana/dashboards/: api_dashboard.json
infrastructure/kubernetes/: api-deployment.yaml  api-service.yaml  configmap.yaml  hpa.yaml  ingress.yaml  postgres-statefulset.yaml  pvc.yaml  redis-deployment.yaml
infrastructure/kubernetes/helm/: Chart.yaml  values.yaml
infrastructure/prometheus/: alerts.yml  prometheus.yml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
k8s/alerting/: pagerduty-opsgenie-integration.yaml
k8s/backup/: cloud-backup-integration.yaml
k8s/base/: configmap.yaml  deployment-api.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  loadbalancer-nginx.yaml  namespace.yaml  pvc.yaml  secret.yaml  service-api.yaml  serviceaccount.yaml  statefulset-postgres.yaml  statefulset-redis.yaml
k8s/chaos/: chaos-experiments.yaml
k8s/compliance/: cis-security-scanning.yaml
k8s/cost/: cost-monitoring-optimization.yaml
k8s/distributed/: ray-cluster.yaml
k8s/dr/: cross-region-replication.yaml
k8s/ingress/: dns-ssl-setup.yaml
k8s/logging/: loki-stack-production.yaml
k8s/monitoring/: grafana-dashboards-configmap.yaml  grafana-production.yaml
k8s/multi-region/: aws-regions.yaml  route53-config.yaml
k8s/production/: 01-namespace.yaml  02-rbac.yaml  03-configmap.yaml  04-api-deployment.yaml  05-services-ingress.yaml  06-secrets.yaml  07-storage.yaml  08-postgres.yaml  09-redis.yaml
k8s/secrets/: external-secrets-operator.yaml
k8s/tracing/: jaeger-distributed-tracing.yaml
mobile/geo-climate-app/: README.md  package.json
monitoring/: docker-compose.monitoring.yml
monitoring/grafana/dashboards/: api-performance.json  business-metrics.json  geo_climate_overview.json  ml-model-performance.json  slo-error-budget.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: geo_climate_alerts.yml
notebooks/: 001_data_check.ipynb  002_data_ingestion.ipynb  003_data_preprocessing.ipynb  004_eda_exploration.ipynb  005_future_engineering.ipynb  007_evaluation_and_viz.ipynb  01_comparasion.ipynb  01_data_check.ipynb  02_data_ingestion.ipynb  03_data_preprocessing.ipynb  04_eda_exploration.ipynb  05_feature_engineering.ipynb  headers_exploration.ipynb
scripts/: backup_restore.py  chaos-engineering-runner.sh  disaster-recovery-drill.sh  run_load_tests.sh  verify-deployment.sh
sdk/javascript/: README.md  package.json
sdk/javascript/src/: index.ts
sdk/python/: README.md  setup.py
sdk/python/geo_climate_sdk/: __init__.py  client.py  exceptions.py
source/: advanced_cleanup.py  data_check.py  data_ingestion.py  data_preprocessing.py  eda_exploration.py  feature_engineering.py  header_extractor.py  missing_handle.py  missing_value_comparison.py  test2.ipynb
source/analytics/: reporting.py
source/api/: __init__.py  auth.py  database.py  export.py  graphql_api.py  main.py  monitoring.py  rate_limiting.py  usage_metering.py
source/cache/: __init__.py  redis_cache.py  strategies.py
source/compliance/: audit_trail.py  blockchain_audit.py  data_lineage.py  gdpr.py  hipaa.py
source/config/: config_loader.py  config_utils.py
source/data/: __init__.py  database.py
source/data/data_preprocessing/: __init__.py  base_data_processor.py  (+1 more)
source/data_ingestion/: data_ingestion_co.py  data_ingestion_no2.py  data_ingestion_o3.py  data_ingestion_pm25.py  data_ingestion_so2.py  merge_pollutants.py
source/database/: __init__.py  base.py  models.py  repository.py
source/enterprise/: multi_tenancy.py  sla_monitor.py  webhooks.py
source/integrations/: partner_framework.py
source/ml/: __init__.py  deep_learning.py  deep_learning_models.py  distributed_training.py  explainability.py  fairness_monitor.py  federated_learning.py  inference.py  model_evaluation.py  model_optimization.py  model_registry.py  model_server.py  model_training.py
source/monitoring/: __init__.py  health.py  metrics.py  tracing.py
source/security/: __init__.py  api_key.py  audit.py  auth.py  rate_limiter.py  rbac.py  validation.py
source/streaming/: realtime_processor.py
source/utils/: cache_manager.py  circuit_breaker.py  config_loader.py  config_utils.py  data_helper.py  feature_utils.py  hash_utils.py  logger.py  metadata_manager.py  path_initializer.py  path_utils.py  project_paths.py
src/: data_ingestion.py
tests/: conftest.py  test_config.py  test_data_check.py  test_data_format.py  test_data_ingestion.py  test_eda_functions.py  test_feature_engineering.py  test_missing_value_comparison.py
tests/e2e/: conftest.py  helpers.py  test_full_stack.py  test_resilience.py  test_user_journeys.py
tests/fixtures/: data_fixtures.py
tests/helpers/: api_helpers.py
tests/load/: README.md  load-test-runner.sh  locustfile.py
tests/performance/: test_benchmarks.py
tests/security/: test_authentication.py  test_input_validation.py  test_rate_limiting.py
(+10 files in other folders)
